# plastl

./: README.md  plastl.py  pyproject.toml
.github/workflows/: build-and-release.yaml
assets/: gen_icons.sh  plastl.icns
