[project]
name = "plastl"
version = "1.0.0"
description = "Plastl Mesh Converter"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy<2",
    "trimesh>=4.6.8",
    "pyqt5>=5.15.11; sys_platform != 'win32'",
    "pyqt5<=5.15.2; sys_platform == 'win32'",
]

[dependency-groups]
dev = ["pyinstaller>=6.13.0"]
